k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloud-native-go
  labels:
    app: cloud-native-go
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: cloud-native-go
        tier: services
    spec:
      containers:
        - name: cloud-native-go
          image: mhewedy/cloud-native-go:1.0.0
          ports:
            - containerPort: 8080
