k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-native-go
  labels:
    language: go
    env: test
spec:
  containers:
    - name: cloud-native-go
      image: mhewedy/cloud-native-go:1.0.0
      ports:
        - containerPort: 8080
