k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go
  labels:
    app: cloud-native-go
    tier: services
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: cloud-native-go    # from the deployment yaml file
