k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-native-go
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cloud-native-go
              servicePort: 8080
